// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test ServerBlockNoteEditor > converts to HTML (blocksToFullHTML) 1`] = `"<div class="bn-block-group" data-node-type="blockGroup"><div class="bn-block-outer" data-node-type="blockOuter" data-id="1" data-text-color="yellow" data-background-color="blue"><div class="bn-block" data-node-type="blockContainer" data-id="1" data-text-color="yellow" data-background-color="blue"><div class="bn-block-content" data-content-type="heading" data-text-alignment="right" data-level="2"><h2 class="bn-inline-content"><strong><u>Heading </u></strong><em><s>2</s></em></h2></div><div class="bn-block-group" data-node-type="blockGroup"><div class="bn-block-outer" data-node-type="blockOuter" data-id="2" data-background-color="red"><div class="bn-block" data-node-type="blockContainer" data-id="2" data-background-color="red"><div class="bn-block-content" data-content-type="paragraph"><p class="bn-inline-content">Paragraph</p></div></div></div><div class="bn-block-outer" data-node-type="blockOuter" data-id="3"><div class="bn-block" data-node-type="blockContainer" data-id="3"><div class="bn-block-content" data-content-type="bulletListItem"><p class="bn-inline-content">list item</p></div></div></div></div></div></div></div>"`;

exports[`Test ServerBlockNoteEditor > converts to and from HTML (blocksToHTMLLossy) 1`] = `"<h2 data-text-color="yellow" data-background-color="blue" data-text-alignment="right" data-level="2"><strong><u>Heading </u></strong><em><s>2</s></em></h2><p data-background-color="red">Paragraph</p><ul><li><p class="bn-inline-content">list item</p></li></ul>"`;

exports[`Test ServerBlockNoteEditor > converts to and from HTML (blocksToHTMLLossy) 2`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": {
          "bold": true,
          "underline": true,
        },
        "text": "Heading ",
        "type": "text",
      },
      {
        "styles": {
          "italic": true,
          "strike": true,
        },
        "text": "2",
        "type": "text",
      },
    ],
    "id": "0",
    "props": {
      "backgroundColor": "default",
      "level": 2,
      "textAlignment": "right",
      "textColor": "default",
    },
    "type": "heading",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph",
        "type": "text",
      },
    ],
    "id": "1",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "list item",
        "type": "text",
      },
    ],
    "id": "2",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "bulletListItem",
  },
]
`;

exports[`Test ServerBlockNoteEditor > converts to and from markdown (blocksToMarkdownLossy) 1`] = `
"## **Heading ***~~2~~*

Paragraph

*   list item
"
`;

exports[`Test ServerBlockNoteEditor > converts to and from markdown (blocksToMarkdownLossy) 2`] = `
[
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "**Heading **",
        "type": "text",
      },
      {
        "styles": {
          "italic": true,
          "strike": true,
        },
        "text": "2",
        "type": "text",
      },
    ],
    "id": "0",
    "props": {
      "backgroundColor": "default",
      "level": 2,
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "heading",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "Paragraph",
        "type": "text",
      },
    ],
    "id": "1",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "paragraph",
  },
  {
    "children": [],
    "content": [
      {
        "styles": {},
        "text": "list item",
        "type": "text",
      },
    ],
    "id": "2",
    "props": {
      "backgroundColor": "default",
      "textAlignment": "left",
      "textColor": "default",
    },
    "type": "bulletListItem",
  },
]
`;
